# the-pack

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  Makefile  PACK_v1.8_CONTEXT.md  PARKING_LOT.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  prompts.py  schemas.py
backend/app/bus/: __init__.py  redis_stream.py
backend/app/core/: alpha_state.py  auth.py  intake.py  logging.py  metrics.py  middleware.py
backend/app/db/: migrate.py  pool.py  repo.py
backend/app/db/migrations/: 0001_initial.sql  0002_foreign_keys.sql  0003_cursor_index.sql  0004_dead_events.sql  0005_relay_attempts.sql  0006_parent_hunt.sql  0007_memory_status.sql
backend/app/engine/: __init__.py  benchmark.py  boundary.py  claim_match.py  core.py  deep_scout.py  dispatch_gate.py  forge.py  healing.py  ids.py  prompt_context.py  receipts.py  refine.py  registry.py  rehearse.py  relay.py  roster.py  search_query.py  startup.py  stray.py  supervisor.py  wolves.py
backend/app/engine/strategies/: __init__.py  base.py  critique.py  deep_dive.py  orchestrate.py
backend/app/events/: __init__.py  models.py
backend/app/qwen/: __init__.py  client.py  context_budget.py  fake.py  pricing.py  types.py
backend/app/routers/: documents.py  hunts.py  instincts.py  memory.py  projects.py  system.py  tools.py
backend/app/storage/: __init__.py  oss.py
backend/app/tools/: _ssrf.py  base.py  cache.py  content_guard.py  file_parse.py  knowledge.py  memory.py  redact.py  search_provider.py  transcribe.py  video.py  vision.py  web.py
backend/app/tools/providers/: __init__.py  academic.py  base.py  community.py  duckduckgo.py  kg.py  news.py  readers.py  (+1 more)
backend/fixtures/: boundary_halt.jsonl  flow_a_researcher.jsonl  flow_b_meeting.jsonl  living_canvas.jsonl  standoff_stray.jsonl
backend/fixtures/incidents/: 2026-07-14-prompt-injection-in-scraped-page.json  README.md
backend/prompts/alpha/: v1.md
backend/prompts/beta/: v1.md
backend/prompts/deep_scout/: v1.md
backend/prompts/doctor/: v1.md
backend/prompts/elder/: v1.md
backend/prompts/howler/: v1.md
backend/prompts/hunter/: v1.md
backend/prompts/scout/: v1.md
backend/prompts/sentinel/: v1.md
backend/prompts/tracker/: v1.md
backend/prompts/warden/: v1.md
backend/schema/: README.md  events.schema.json
backend/scripts/: check_architecture.py  check_prompt_cache.py  gen_postman.py  hello_pack.py  hello_qwen.py  live_hunt.py  pack_doctor.py  qa_scoreboard.py
backend/tests/: _fakes.py  conftest.py  test_admission_gate.py  test_alpha.py  test_alpha_conversation.py  test_architecture_guard.py  test_auth.py  test_cache.py  test_completion.py  test_content_guard.py  test_context_budget.py  test_contract.py  test_deep_scout.py  test_depth_scaling.py  test_dispatch_gate.py  test_duckduckgo.py  test_elder_memory.py  test_emitter_seq.py  test_endpoints_v4v5.py  test_extra_support_agents.py  test_file_parse.py  test_flight_recorder.py  test_http_commands.py  test_incident_replay.py  test_intake.py  test_intake_roles.py  test_main_shutdown.py  test_merge_attribution.py  test_offline_hunt.py  test_oss_storage.py  test_outbox_relay.py  test_pack_doctor.py  test_pricing.py  test_providers.py  test_qa_scoreboard.py  test_qwen_wire.py  test_receipts.py  test_registry.py  test_rehearse.py  test_repo.py  (+10 more)
backend/tests/live/: conftest.py  test_live_deep_scout.py  test_live_qwen.py
gateway/: .gitignore  Cargo.toml
gateway/src/: main.rs
(+211 files in other folders)
