[project]
name = "pack-engine"
version = "0.1.0"
description = "Pack — the Python brain. The whole engine: Alpha loop, wolves, tools, Boundary, the event spine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "openai>=1.40",
    "asyncpg>=0.29",
    "jsonschema>=4.22",
    "python-ulid>=2.7",
    "httpx>=0.27",
    "pypdf>=4.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.2",
    "python-docx>=1.1",
    "markdown>=3.6",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "imageio-ffmpeg>=0.5",
    "prometheus-client>=0.20",
    "oss2>=2.18",  # Alibaba Cloud OSS SDK — the artifact object store (app/storage/oss.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff==0.15.20",  # pinned == the pre-commit rev (.pre-commit-config.yaml) so hook and CI can't drift
    "respx>=0.21",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI's Depends()/File()/Query() in default args is the correct pattern
    "E501",  # line length is owned by `ruff format`, not the linter (ruff's own recommendation)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true   # third-party libs (asyncpg, redis, openai, pypdf, …) ship partial stubs

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
